Added Lasso/Ridge regressions

--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -552,7 +552,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -651,15 +651,161 @@
      "text": [
       "Coefficient of restrictivenessMeasure:  -0.10806081081081081\n",
       "Intercept:  -30.046817567567565\n",
-      "R^2:  -30.046817567567565\n"
+      "R^2:  0.010059420836790678\n"
      ]
     }
    ],
    "source": [
     "print(\"Coefficient of restrictivenessMeasure: \", relAggrRegr.coef_[0])\n",
     "print(\"Intercept: \", relAggrRegr.intercept_)\n",
-    "print(\"R^2: \", relAggrRegr.intercept_)"
+    "print(\"R^2: \", relAggrRegr.score(relRestrMeas, Y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ridge()"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridge = linear_model.Ridge()\n",
+    "X = relevantPolicies[xVars]\n",
+    "Y = relevantPolicies[\"Q2GDPChange\"]\n",
+    "ridge.fit(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient of  easingOrder :  -1.0078896179485897\n",
+      "Coefficient of  stayAtHome :  -0.9097780608346612\n",
+      "Coefficient of  mandatoryQuarantine :  -1.3064868248311619\n",
+      "Coefficient of  nonEssentialBusiness :  -0.2311218963571726\n",
+      "Coefficient of  largeGatherings :  0.09072554074684155\n",
+      "Coefficient of  schoolClosure :  0.6881544809265732\n",
+      "Coefficient of  restaurantLimit :  -0.16888437375979184\n",
+      "Coefficient of  barClosures :  1.923545860228992\n",
+      "Coefficient of  faceCoveringRequirement :  -0.9121293225755573\n",
+      "Intercept:  -30.38716511753594\n",
+      "R^2:  0.2182801615684974\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(xVars)):\n",
+    "    print(\"Coefficient of \", xVars[i], \": \", ridge.coef_[i])\n",
+    "print(\"Intercept: \", ridge.intercept_)\n",
+    "print(\"R^2: \", ridge.score(relevantX, relevantY))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Lasso()"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aggrLasso = linear_model.Lasso()\n",
+    "X = relevantPolicies[[\"restrictivenessMeasure\"]]\n",
+    "Y = relevantPolicies[\"Q2GDPChange\"]\n",
+    "aggrLasso.fit(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient of restrictivenessMeasure:  -0.04947972972972975\n",
+      "Intercept:  -30.732560810810806\n",
+      "R^2:  0.007103101815150614\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Coefficient of restrictivenessMeasure: \", aggrLasso.coef_[0])\n",
+    "print(\"Intercept: \", aggrLasso.intercept_)\n",
+    "print(\"R^2: \", aggrLasso.score(X, Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ridge()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aggrRidge = linear_model.Ridge()\n",
+    "aggrRidge.fit(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient of restrictivenessMeasure:  -0.10793682931767562\n",
+      "Intercept:  -30.048268880340146\n",
+      "R^2:  0.01005940759489199\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Coefficient of restrictivenessMeasure: \", aggrRidge.coef_[0])\n",
+    "print(\"Intercept: \", aggrRidge.intercept_)\n",
+    "print(\"R^2: \", aggrRidge.score(X, Y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
