final survey data

--- a/SurveyData.ipynb
+++ b/SurveyData.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/arnavverma/opt/anaconda3/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -787,7 +796,7 @@
        "[33065 rows x 38 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,16 +808,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "linearregr = linear_model.LinearRegression()"
+    "regr = linear_model.LinearRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -820,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +838,7 @@
        "Text(0, 0.5, 'Number of Respondent')"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -855,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +878,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fcb9a313fd0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc5892460d0>]"
       ]
      },
      "metadata": {},
@@ -893,12 +902,13 @@
     "print(regr.coef_)\n",
     "print(regr.score(survey[['coronavirusConcern', 'HouseIncome']], survey['coronavirusIntent_Mask']))\n",
     "x = plt.plot(regr.predict(survey[['coronavirusConcern', 'HouseIncome']][:100]))\n",
+    "#no relation between income/socioeconomic status and intent to wear masks\n",
     "display(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1602,7 @@
        "[33065 rows x 38 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1624,7 @@
        "Text(0, 0.5, 'Number of respondents')"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1639,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -1650,7 +1660,7 @@
        "Text(0, 0.5, 'Household Income')"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1677,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1696,7 @@
        "Text(0, 0.5, 'Intent to wear Mask')"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1712,7 +1722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1721,7 +1731,7 @@
        "Text(0, 0.5, 'Average Concern for COVID')"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1748,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1778,7 @@
        "Text(0, 0.5, 'Average Concern for COVID')"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1804,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -2432,18 +2442,18 @@
        "1171             0.0         something-else         10.0            0.0   \n",
        "1172             5.5         something-else          8.8            9.0   \n",
        "\n",
-       "      zipcodePrefix startTime  coronaSimilarFlu  coronaOnlyElderly  \\\n",
-       "0             779.0         5             False              False   \n",
-       "1             274.0         4             False              False   \n",
-       "2             750.0         6             False              False   \n",
-       "3             300.0         5              True              False   \n",
-       "4             913.0         6             False              False   \n",
-       "...             ...       ...               ...                ...   \n",
-       "1168          624.0         5             False              False   \n",
-       "1169          280.0         6             False              False   \n",
-       "1170          675.0         4              True              False   \n",
-       "1171          294.0         5             False              False   \n",
-       "1172          701.0         5             False              False   \n",
+       "      zipcodePrefix  startTime  coronaSimilarFlu  coronaOnlyElderly  \\\n",
+       "0             779.0          5             False              False   \n",
+       "1             274.0          4             False              False   \n",
+       "2             750.0          6             False              False   \n",
+       "3             300.0          5              True              False   \n",
+       "4             913.0          6             False              False   \n",
+       "...             ...        ...               ...                ...   \n",
+       "1168          624.0          5             False              False   \n",
+       "1169          280.0          6             False              False   \n",
+       "1170          675.0          4              True              False   \n",
+       "1171          294.0          5             False              False   \n",
+       "1172          701.0          5             False              False   \n",
        "\n",
        "      youngInvulnerable  elderlyMoreRisk  coronaAllHospitalize  \\\n",
        "0                 False             True                 False   \n",
@@ -2500,7 +2510,7 @@
        "[33065 rows x 38 columns]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2514,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -2750,7 +2760,7 @@
        "6                    0.693799        0.239477          0.160536  4.909081e+08  "
       ]
      },
-     "execution_count": 192,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2763,18 +2773,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 18,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/arnavverma/opt/anaconda3/lib/python3.7/site-packages/matplotlib/cbook/__init__.py:1402: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+      "  x[:, None]\n",
+      "/Users/arnavverma/opt/anaconda3/lib/python3.7/site-packages/matplotlib/axes/_base.py:276: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+      "  x = x[:, np.newaxis]\n",
+      "/Users/arnavverma/opt/anaconda3/lib/python3.7/site-packages/matplotlib/axes/_base.py:278: FutureWarning: Support for multi-dimensional indexing (e.g. `obj[:, None]`) is deprecated and will be removed in a future version.  Convert to a numpy array before indexing instead.\n",
+      "  y = y[:, np.newaxis]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Text(0, 0.5, 'Average Intent to wear Mask')"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2803,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2834,7 @@
        "Text(0, 0.5, 'Average Intent on Staying Six Feet Apart')"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2838,7 +2860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2847,7 +2869,7 @@
        "Text(0, 0.5, 'Average Intent of Staying at Home')"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2873,7 +2895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2882,7 +2904,7 @@
        "Text(0, 0.5, 'Average Concern for COVID')"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2908,16 +2930,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'SUMMARY (THIS SHOULD BE ON THE REPORT)\\n\\nGovernment restrictions (USA) for the coronavirus such as stay at home orders and mask requirements were all in place by\\nApril/May. We can see that people on average were all inclined to follow government policies for the most part (all\\nthe visualized/analyzed data was from the United States). However, stay at home restrictions start becomind slightly\\nharder to enforce as seen by the negative slope in the intent of staying at home, staying siz feet away, and overall\\naverage concern for coronavirus. Although the decline is minimal, it is evident that it exists from the visualizations.\\nAnother important observation might be that people are willing to wear masks regardless, which might be because\\nof mandatory mask enforcement from outside places such as grocery/convenience stores etc.'"
+       "'SUMMARY (THIS SHOULD BE ON THE REPORT)\\n\\nGovernment restrictions (USA) for the coronavirus such as stay at home orders and mask requirements were all in place by\\nApril/May. We can see that people on average were all inclined to follow government policies for the most part (all\\nthe visualized/analyzed data was from the United States). However, stay at home restrictions start becomind slightly\\nharder to enforce as seen by the negative slope in the intent of staying at home, staying siz feet away, and overall\\naverage concern for coronavirus. Although the decline is minimal, it is evident that it exists from the visualizations.\\nAnother important observation might be that people are willing to wear masks regardless, which might be because\\nof mandatory mask enforcement from outside places such as grocery/convenience stores etc. (Mention that the scale makes\\nthe difference look bigger)'"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2931,7 +2953,8 @@
     "harder to enforce as seen by the negative slope in the intent of staying at home, staying siz feet away, and overall\n",
     "average concern for coronavirus. Although the decline is minimal, it is evident that it exists from the visualizations.\n",
     "Another important observation might be that people are willing to wear masks regardless, which might be because\n",
-    "of mandatory mask enforcement from outside places such as grocery/convenience stores etc.\"\"\""
+    "of mandatory mask enforcement from outside places such as grocery/convenience stores etc. (Mention that the scale makes\n",
+    "the difference look bigger)\"\"\""
    ]
   },
   {
