--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -408,9 +408,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Rzh5YeQ1wr_R"
+      },
+      "source": [
+        "# Correlations of relevant policies with GDP change\n",
+        "plt.title(\"Policies to GDP Correlations\")\n",
+        "plt.xticks(rotation='vertical')\n",
+        "labels=['easingOrder', 'stayAtHome', 'mandatoryQuarantine',\n",
+        "       'nonEssentialBusiness', 'largeGatherings', 'schoolClosure',\n",
+        "       'restaurantLimit', 'barClosures', 'faceCoveringRequirement', 'restrictivenessMeasure']\n",
+        "pyplot.bar([x for x in range(len(labels))], relevantPolicies.corr()[\"Q2GDPChange\"].drop(\"Q2GDPChange\"), tick_label=labels)\n",
+        "pyplot.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Bg7fLD_387l2"
       },
       "source": [
+        "# Number of trials to fit model and average over\n",
         "FITS = 100\n",
         "\n",
         "# decision tree for feature importance on a regression problem\n",
@@ -433,11 +452,6 @@
         "# summarize feature importance\n",
         "for i,v in enumerate(avg_importance):\n",
         "\tprint(xVars[i], v)\n",
-        "# plot feature importance\n",
-        "\n",
-        "plt.xticks(rotation='vertical')\n",
-        "dec_tree = pyplot.bar(range(len(xVars)), avg_importance, tick_label=xVars)\n",
-        "pyplot.show()\n",
         "\n",
         "print(\"Intercept: \", model.predict([[0 for x in range(len(xVars))]])[0])\n",
         "print(\"R^2: \", model.score(X,y))"
@@ -451,7 +465,8 @@
         "id": "-u44vHiW87l3"
       },
       "source": [
-        "FITS = 10\n",
+        "# Number of trials to fit model and average over\n",
+        "FITS = 100\n",
         "# random forest for feature importance on a regression problem\n",
         "from sklearn.datasets import make_regression\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
@@ -471,11 +486,6 @@
         "# summarize feature importance\n",
         "for i,v in enumerate(avg_importance2):\n",
         "\tprint(xVars[i], v)\n",
-        "# plot feature importance\n",
-        "\n",
-        "plt.xticks(rotation='vertical')\n",
-        "rand_forest = pyplot.bar(range(len(xVars)), avg_importance2, tick_label=xVars)\n",
-        "pyplot.show()\n",
         "\n",
         "print(\"Intercept: \", model.predict([[0 for x in range(len(xVars))]])[0])\n",
         "print(\"R^2: \", model.score(X,y))"
@@ -489,6 +499,7 @@
         "id": "91SPJh2RknG3"
       },
       "source": [
+        "# Plotting random forest and decision tree feature importances side by side\n",
         "plt.xticks(rotation='vertical')\n",
         "plt.title(\"Decision Tree\")\n",
         "pyplot.bar(range(len(xVars)), avg_importance, tick_label=xVars)\n",
@@ -517,200 +528,6 @@
         "plt.xticks(rotation='vertical')\n",
         "pyplot.bar(range(len(xVars)), importance, tick_label=xVars)\n",
         "pyplot.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2zBDTjmS87l3"
-      },
-      "source": [
-        "# function to add up quantified policies to get aggregate measure of restrictiveness\n",
-        "def addRestrictMeasure(df, varsToUse):\n",
-        "    sums = [math.sqrt(sum([df[var][i]**2 for var in varsToUse])) for i in df.index]\n",
-        "    df.insert(loc = len(df.columns), column = \"restrictivenessMeasure\", value = sums)            "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "coiwJGii87l3"
-      },
-      "source": [
-        "addRestrictMeasure(relevantPolicies, xVars)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qGZSQMh787l3"
-      },
-      "source": [
-        "# running regression of change in gdp on restrictivnessMeasure\n",
-        "relAggrRegr = linear_model.LinearRegression()\n",
-        "relRestrMeas = relevantPolicies[[\"restrictivenessMeasure\"]]\n",
-        "Y = statePolicies[\"Q2GDPChange\"]\n",
-        "relAggrRegr.fit(relRestrMeas, Y)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oPsqxd5L87l3"
-      },
-      "source": [
-        "print(\"Coefficient of restrictivenessMeasure: \", relAggrRegr.coef_[0])\n",
-        "print(\"Intercept: \", relAggrRegr.intercept_)\n",
-        "print(\"R^2: \", relAggrRegr.score(relRestrMeas, Y))"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "scrolled": true,
-        "id": "c4zrjRNI87l3"
-      },
-      "source": [
-        "plt.scatter(relevantPolicies[\"restrictivenessMeasure\"], relevantPolicies[\"Q2GDPChange\"])\n",
-        "minRestric = min(relevantPolicies[\"restrictivenessMeasure\"])\n",
-        "maxRestric = max(relevantPolicies[\"restrictivenessMeasure\"])\n",
-        "xCords = np.linspace(minRestric, maxRestric)\n",
-        "yCords = xCords * relAggrRegr.coef_[0] + relAggrRegr.intercept_\n",
-        "plt.plot(xCords, yCords)\n",
-        "plt.xlabel(\"Sum of Restrictiveness Policies\")\n",
-        "plt.ylabel(\"Change in GDP in Q2 of 2020\")\n",
-        "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WJ_n7sYRdgT6"
-      },
-      "source": [
-        "np.argmin(relevantPolicies[\"restrictivenessMeasure\"])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sdeoIf0UeWXk"
-      },
-      "source": [
-        "np.argmax(relevantPolicies[\"restrictivenessMeasure\"])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "N-c5ruOUdyIq"
-      },
-      "source": [
-        "relevantPolicies[\"Q2GDPChange\"][41]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "t4JY8LODeYd5"
-      },
-      "source": [
-        "relevantPolicies[\"Q2GDPChange\"][4]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Pk4V4ajkePpi"
-      },
-      "source": [
-        "relevantPolicies[\"id\"][41]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Pt-5JEFxeaTg"
-      },
-      "source": [
-        "relevantPolicies[\"id\"][4]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2xV4FYYMeksZ"
-      },
-      "source": [
-        "np.argmin(relevantPolicies[\"Q2GDPChange\"]), np.argmax(relevantPolicies[\"Q2GDPChange\"])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Suw7iJMKey7w"
-      },
-      "source": [
-        "relevantPolicies[\"id\"][11], relevantPolicies[\"id\"][8]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CXuEEgeuertw"
-      },
-      "source": [
-        "relevantPolicies[\"restrictivenessMeasure\"][11], relevantPolicies[\"restrictivenessMeasure\"][8]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3i8ScEbSe9-z"
-      },
-      "source": [
-        "minRestric, maxRestric"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FzHbwHFgfE7W"
-      },
-      "source": [
-        "relevantPolicies"
       ],
       "execution_count": null,
       "outputs": []
